lab1/Test/L1-A-3-18.output
Error Type B at Line 2
Error Type A at Line 12
Error Type B at Line 29
Error Type A at Line 31
Error Type B at Line 39
Error Type B at Line 43
Error Type A at Line 111
