lab1/Test/L1-A-3-18.cmm
float qM0lwmUsnfGL28kjyz ( struct EOAobbcg5nwM t8axoAYE 
  [ 1581735974 ] ) < {
  int hmlFAM0h4m = ! ! - ! ! orADqnF + ! ! - BwTtynYgx 
    * - rUE * p9pC7XEPCdW ( ) [ Q2bEH ] * ! OMgr8ewTRaHd 
    - x7R9OUSdpf6 ( ! r3 = p , FFRcVzIy3UEiWjMzKxah ) 
    [ SJAOKcWyTJ ( tENSpVFQEogpcSGQB ) = d_ ] / - SYi_AWVDVZLrOUu7i 
    == kzvi4ceZdSi ( ! NzFObmPP7f9fkI1i - AHErsZIU84aO 
    + ByHiPSbOVBxkh + eoO58SqVxrEkzrRBO >= vtn4ad == tqrXdxXQaUXkZJcxTsr 
    || SfX4Llq5rJ9uARS0 , Cb ) . K . jhtdd2UyD2fI != - 
    SRe3RztL5hU1J7FG ( ) [ V7KR ] * gJ0j6EqQ7llsB ( rA6u6rQ8AdCwEWau 
    ) - - JG * HR0O5oBp - GZ_xffiw8JvvckA + sE_eG_f_VxvrA_ 
    `( ) >= ! ! - mKt / 567209689 / 1558652024.1168591633 
    [ ZopR2vn9PQTHd0Qea ] >= ! Elblyr6toNW7 ( ) < ! 1202622441 
    / ! f * XpY59SFV5 ( v7QJ4ytR ) / - iLO - zHr ( S9VWXQ6LWTV6K 
    ) . gll3dt7G8rkJpo54JLHi * ioqIC_ - noMzeh1igFQwRN9ewQxS 
    ( aMx ) * Mqm7OAUTtv8qG * B03z0FFf * jMWOH / gkGrLAxoWf5Oq6 
    * yq5X25vA9aM / s6ctWD6iNySU2lbJ3 + ! yHd / gSE6ZYE 
    / zEMjF / _IT3e0B / ahuIw0Lz4d * rgycWHkKLIV0r7d3ko 
    < jWmmPnnvec4gtpJd ( ) * - dEWVMKoSli > Kxb63daT01Mc 
    ( ) [ ! w9rkZEfL6j4 = I__13lBVDD ] [ mXDduwsuh ( ) 
    = HDzxt0XewK3reTLrHo ] [ b7G1vpZOmvdH5oiK5 [ vD_lBVb60CC 
    ] . myV7u7JAxNnO * UZhh950IiAG7i * Za1S2guxb9c46oMhAgYt 
    * klXLNl_W + Ei4rNF4SR57oRnlF + wFVGirZZCArjzx - SsIW 
    <= fGN == TPHvRnMDTbiRfr >= hzynlcLJynyXaCe > BYGAQa 
    || ToKYPyyxMZz_euryMA || WNW2h3ER ] . znp7Cu + PV5FD 
    ( GIJh6FkOLN ) . F_V4kqC0v9Z6rgwT [ dsCEaFYEXOA5cSgFK 
    ] . cGITfJ / I29O ;
  int QluZbbJ3zyKbsGVv0 , V4Kz , G [ 1469039888 ] 
     [ 338224681 ] = ye8jGnYiWb_SX2A_TN ;
  struct qjAUw UoORwFCpQPKoS8XeTf [ 763464113 ] [ 
    815506690 &] ;
  struct wi1V5nnvJeALxXtZH {
    struct YXVMwdXXlty4QR {
    }CUwup2xayUXvFCy1f [ 2088903754 ] = MQRErTiBclK 
      , A20wmN_VGHcWFzX9V ;
  }l4fObOhN , sJuAb77UJwvZGJ5Rssa [ 2023046707 ] = 
    ryMpkphnWxwgWE95Ls ;
  float Ik4kgvlcnKYf5 = - I702OXO3cHs = s3zX4yiXJ 
    , ulgMT8Wqq4yi0jbK [ 1410338488 ] , != l5V3WP62paDy0c 
    ;
  if ( - - ZuhJ ( ! KLMXPb04dhKfNj0MLH = tY9ERrOYrupdubUv 
    ) )   if ( - ZXTb * KFnqqSpy9p5WG25smja <= Dtu5et 
    >= jYr8kZuqT else >= vMrIG7SgYE9k <= cByKxg6nhgY9j 
    > M72uF6RkL_Z2x0d <= E > OQlQsHcmdQod2t8Ux0b == avI 
    >= r24x > m4GQdanh41e4 != XqbIpRmgkOX8 < R < aOCuirjFKf6O99 
    >= YgvVS66bQP1GE )   t1xI5LvG_1zv6 ;
else   AwVU2 ;

else   if ( RYNrJ2FgfU9QZ3_pI0 )   ElBRdwgyVjIJhhbHV 
    ;
else   if ( DsqKmo3L )   qyfmZ8KDCPfTdI ;



  if ( fY68uz3cN ( ) = - ! EC5zPFfNrAF / fF7ToCVrP 
    / DZax9sKoKR8Zx1dvs9f + wWDropWHc < tluppshXrT3pa 
    >= bauJUXG_TxFWFt_uU7o <= qd1Bi44k4Mrkf84I <= ACWF7g60P 
    != ZRhpEUXEbS != Q0XXHxE3LitlaUNgc >= KN4BBiv35aphpYNHau7 
    == KSz >= ilTgSX <= G0o4D_SxnrLIu || LgSb06TN )   if 
    ( QtaBa3PMY4yMpwdN )   YdFVpSWc ;
else   f6sWZx8Ex1ey1I ;


  if ( ! ! - Sdr / - TGjqG9 * nNDcDcKCqN7dek2enSc 
    ( HEp1cd_8R4ai5iqc0CT ) [ JakijUoRz54oS1LI9o ] / - 
    t <= - w_Z7x0jPFHM + VjQiK + Igf8C_g - gsPz6 + I1h3nBADjORlhT 
    - EV - enqeGeA7EWNnPu1Gk + Lm4OtrSF3yw >= LP ( IS2xRbwuZyECxQU 
    ) . ibouIb58lwmw5Mhxfo * P * aQdoG / TZOBkAqkMAYCG 
    > MLWM286GRQbI ( ) / I_cmmN / o / pQTWI2n9KY / fS6Tabr6G 
    / oKkoxQX7P + vdq1yJA4k - aaNB8sMiuh - NLJOdLLjgENY 
    + AaQmjcGCQzHu - M9Y8oqvFd9iI2GUe6X - deFMwjxwvO - 
    i_POH5AllD - LltIXciVsp == ! YUtXPsf6sSaeE * aPeZXtNuVJKILWNargUh 
    * mnhAGGW27Piwxfz79 * lkp0ID6 * iBS7dN65uc / _oiVwf7uyvAww 
    / HVZ <= ! nZSN5a + rjIZPw6tOZhvi9mauAg8 + liQO7Q27mZOh 
    >= 1226588005 [ n8T6FOT0r9I0hOr4 ] . cKiiDYmFBejHFwsvB1c 
    * m_iJSVyJ7 * LebO3RiDpV_ * s10nA_TGv62 * MQFMKPz113YJ 
    / L90N <= - E8LJ9I * oW4l_unH5U * yBlwh3IGa8KITqOWFGkk 
    * CJzPdzd * alzjBdIWTgfo3BS * ERrDTK * HD06S0es * 
    Olpecvz9lwTBqRBvQLw / nb2pd7eMoahN / K729Us47a * Br6 
    / jt8IzQ * TZRZA7oTldm83fc * ggoWInjagUxl3yBw + l_ 
    - DbzF4LxfjdsFB9W9tTOq - TMcCr + U6P9WS - F3o4mLRnwAU 
    <= - LaMGMSrSwA && ! JrR0tzZaYTH7 / Ul + WHmEgT6dl6wXFO 
    >= bU <= ltNIsutELxyQaA7 >= lgmdRT6ZYKMJD == Kmrg6eNd 
    != YKH5kgQYW3x5KwkI < aJqmLtVYJhp7I != JPQqMkR9 < 
    H5C && ! OQuqJcfKpqxEyB * cpkdhvJomG_RtggI6H + v3sn53V0 
    - ee8q2nGi37MGZrAp2B + abROoaZNcMK5k + jqTEFN1Q < 
    NL5CPMM > s <= BL5frcnv != x6LgTk_oP_DFmp5 != KkTXRhjgkoVP 
    != QvXMUHEbp0xXD > xa6VxGzzAdePGxi >= W4sSyyK >= gbNmz 
    == cqD >= _MRc > eqpxb07Gi1pFRy <= elL2aImRv7Pw1NqmT 
    == LFr4 && - Ki7xQfT * qQusk4Aod16wS_Xad / P2Btqh92FmfcKivuT 
    * uNkelC / cVLMw8V * NLKKsRkDkkByRROxmpI - oaaqJsqRGOnn1XxJrMxj 
    + gOUj - OHr01UqP + FchpxJUq + J + Rm9Xu8E == rqJ9xBF4fCC6hlxD 
    != CErAdfkbScCy == pBUf_AGh2IKP9J3QUD && ! CbDYEbpRlMUJ9jbaJ0Va 
    * orzB * oIDpkxcAAADbC_XBYk * r8yfvBZt2Ed3VL * WwK1xi_O5YqfzdMc 
    * NMPgwdVaEQV * GQ - lO + XZvtucJ8 - YFkVBRQB6 > Y 
    < AxwQ > N2E6H5cshjUeYPHSsP < gOZfAxm == G5F3NjMb 
    != UzTLVdQEgWlh > oWKDIpUPSyoHgsT9W == Weo5E1ki0MTwwfWfi 
    != CVwATf88MeJWXPriFR <= Uw0AEwdEApCQpP8 != Xp7LtW2aTLpHfLm 
    && _QPHwOT4jGOagn7 ( FdnTug0rR9Vr_ ) * WLIYT3L / aNlEN0Yg1in 
    * EJMiwY3gOtz_wzq != _WUTdGaSuGdx < sV2Atmf == ViSMn 
    == dRJwSUqCUtnuXrP0GxeN >= igxdpTqjDEswmTfhK == EXae 
    != SDU70H_jgOQ < QCxZKjxn6Vp <= QtMYI7MrV_ < HqWryokZLOYzcplHv_n 
    < UTh9R4Z3pvYV < yCnDIyhD2DwGb0BEZ != pfO2obva_1nxH 
    != kU8fnR7Fv5PJF >= UMt6Fml2izFXZIoJQU < vjFKv0LaKGT2uR 
    != DS53oy8qNRA == ldYlwcSV5Vt07h_ == AD == uJEfc && 
    ! JH * sXNjohpQsBhspGB2dI7 / mYBjQIjfltfBQuF_zB * 
    _n + Djf7x8ePrP - kOkar - wjttKZqCbSkb1Kaj2 + B0 - 
    pJIkMQp + DETajCbu - vADI - xWdk2hMpBtekfPkHKgE + 
    axnCJBTI - pxuS_TZNcC588 - M5rF - PXtPv6HMoQ2b0npt9 
    + Yqps > fxoDYlZnHo == krui && rLNdCupm1u4 ( WwzwC 
    @) [ ZqbGghA ] . HqV / s2g4lyJi8zgWylFv1Uo * jD6 * 
    E8Tp34_3al && - xs3p078ZdvsR6L + ejgole49QI4mLa - 
    Z - Nw8h51XLdW9 - DOGIp1IF4d8RZOP7Jf == Xi6DkvUrgxM3PQ 
    < eZ < d >= zO != tiWOv_ugwwW0 <= UP9sIPSHqWrkkxtF 
    < V6zgixRiZixxmeRWJeS == Lz69qPiR85Sza == XpJgU || 
    ! XH3TjBvZcDf6RZvvto * voTBQH2Qu_G2phPHY / vPKNQM 
    * dR4tr2 / OAICZC9X92LA * sjcL9CJI5WrdeI + jJYqwA4K8I2ZD 
    + L8KEmUkt + kw8k - yKE8qma_NPnLQv_5 <= aipsKJGEKWl4tGUc 
    != yyY1TVeKDQ == bSxIvZWV )   if ( J8u6p3VM1HxTs ) 
      WtOEnCQ6l ;


}
struct nrKZya lk4reSPhxSq0h4ZoVW 
;
